arranger/services.yml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: arranger-server
  name: arranger-server
spec:
  ports:
    - port: 5050
      protocol: TCP
      targetPort: 5050
  selector:
    app: arranger-server
