arranger/ingresses.yml
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: arranger-server
spec:
  tls:
    - hosts:
        - __UNDEFINED__
      secretName: letsencrypt-certificate
  rules:
    - host: __UNDEFINED__
      http:
        paths:
          - path: /
            backend:
              serviceName: arranger-server
              servicePort: 5050
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: arranger-admin-ui
spec:
  tls:
    - hosts:
        - __UNDEFINED__
      secretName: letsencrypt-certificate
  rules:
    - host: __UNDEFINED__
      http:
        paths:
          - path: /
            backend:
              serviceName: arranger-admin-ui
              servicePort: 80
